--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "date-fns": "^2.16.1",
     "next": "10.0.1",
+    "next-pwa": "^3.1.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
